# elementary-hellow

./: .gitignore  LICENSE  meson.build
data/: hellow.appdata.xml.in  hellow.desktop.in
po/: LINGUAS  POTFILES  com.github.eycopia.elementary-hellow.pot  de.po  en.po  es.po  meson.build
src/: Application.vala
